--- a/code/faith/python/OrderUp/OrderUp_app/templates/base.html
+++ b/code/faith/python/OrderUp/OrderUp_app/templates/base.html
@@ -26,6 +26,7 @@
         <option value="Veggi Platter">Veggi Platter</option>
         <option value="Big Impossible Burger">Big Impossible Burger</option>
       </select><br>
+      <h4>Add ons?</h4><br>
         <input type="checkbox" id="Lettuce" name="Lettuce"
              checked>
         <label for="Lettuce">Lettuce</label><br>
@@ -38,6 +39,12 @@
         <input type="checkbox" id="" name="Onions"
              checked>
         <label for="Onions">Onions</label><br>
+        <input type="checkbox" id="Mayo" name="Mayo"
+        checked>
+        <label for="Mayo">Mayo</label><br>
+        <input type="checkbox" id="Ketchup" name="Ketchup"
+        checked>
+   <label for="Ketchup">Ketchup</label><br>
       <h4>What would you like for your first side?</h4>
     <select>
         <option value="None">None</option>
@@ -77,10 +84,16 @@
         <input type="checkbox" id="double bag" name="double bag"
         checked>
         <label for="double bag">Double Bag?</label><br>
-        <p></p><input type="text" name="text" placeholder="Comment"/></p><br>
+        <p><input type="text" name="text" placeholder="Comment"/></p><br>
+        <input type="radio" name="option" value="Delivery" required> Delivery<br>
+        <input type="radio" name="option" value="Pickup"required> Pick-up<br>
+        <input type="radio" name="option" value="Curbside" required> Curbside<br>
         <input type="submit" value="Submit">
+        
 
     
     </form>
+    <h6><footer>&copy; Copyright 2022 Faith Cicero</footer></h6>
+
 </body>
 </html>
