--- a/code/faith/python/OrderUp/OrderUp_app/templates/thankyou.html
+++ b/code/faith/python/OrderUp/OrderUp_app/templates/thankyou.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'thankyou.css'%}">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thank You!</title>
 </head>
-<body>
+<body><header>
     <h1>Thank you</h1>
+</header>
     <h3> The admin has recieved your request, and will get to cooking.</h3>
     <form action="/">
-        <input type="submit" value="START NEW ORDER">
-    </form>
-
+        <img src="{% static 'branch.png' %}" alt="branch" width="100" height="100"><br>
+        <input type="submit" value="START NEW ORDER"><br>
+</form>
+    
 </body>
+<footer>
+    <h6><footer>&copy; Copyright 2022 Faith Cicero</footer></h6>
+</footer>
 </html>
