--- a/code/faith/python/OrderUp/OrderUp_app/templates/welcome.html
+++ b/code/faith/python/OrderUp/OrderUp_app/templates/welcome.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'welcome.css'%}">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome</title>
 </head>
 <body>
+    <header>
     <h1>OrderUp</h1>
+    </header>
     <h3>Thank you for Choosing the #1 Vegan food service to serve you!</h3>
     <form action="form/">
+        <img src="static/burger.png" alt="branch" width="150" height="150"><br>
         <input type="submit" value="BEGIN">
     </form>
+    
 </body>
+<footer>
+    <h6><footer>&copy; Copyright 2022 Faith Cicero</footer></h6>
+</footer>
 </html>
