--- a/code/faith/python/OrderUp/OrderUp_app/templates/thankyou.html
+++ b/code/faith/python/OrderUp/OrderUp_app/templates/thankyou.html
@@ -13,7 +13,7 @@
 </header>
     <h3> The admin has recieved your request, and will get to cooking.</h3>
     <form action="/">
-        <img src="{% static 'branch.png' %}" alt="branch" width="100" height="100"><br>
+        <img src="{% static 'cooking.png' %}" alt="branch" width="100" height="100"><br>
         <input type="submit" value="START NEW ORDER"><br>
 </form>
     
