--- a/code/faith/python/OrderUp/OrderUp_app/templates/thankyou.html
+++ b/code/faith/python/OrderUp/OrderUp_app/templates/thankyou.html
@@ -16,7 +16,7 @@
         <img src="{% static 'cooking.png' %}" alt="branch" width="100" height="100"><br>
         <input type="submit" value="START NEW ORDER"><br>
 </form>
-    
+    <h6>{% now "Y-M-d" %}</h6>
 </body>
 <footer>
     <h6><footer>&copy; Copyright 2022 Faith Cicero</footer></h6>
