--- a/code/faith/python/OrderUp/OrderUp_app/templates/welcome.html
+++ b/code/faith/python/OrderUp/OrderUp_app/templates/welcome.html
@@ -14,10 +14,10 @@
     </header>
     <h3>Thank you for Choosing the #1 Vegan food service to serve you!</h3>
     <form action="form/">
-        <img src="static/burger.png" alt="branch" width="150" height="150"><br>
-        <input type="submit" value="BEGIN">
+        <img src="static/burger.png" alt="branch" width="100" height="100"><br>
+        <input type="submit" value="BEGIN ORDER">
     </form>
-    
+    {% comment %} <img src="static/002-vegan-1.png" alt="branch" width="250" height="250"><br> {% endcomment %}
 </body>
 <footer>
     <h6><footer>&copy; Copyright 2022 Faith Cicero</footer></h6>
