--- a/code/faith/HTML/lab02/lab02.css
+++ b/code/faith/HTML/lab02/lab02.css
@@ -53,6 +53,32 @@ footer{
     img {
         display: flex;
         flex-wrap: wrap;
+        float: left;
+        
+    }
+    header{
+        margin-bottom: 10em;
+    }
+    
+    p{
+        float: left;
+        text-align: left;
+        padding-right: 25em;
+    }
+}
+@media screen and (min-width: 1100px){
+    img{
+        display: flex;
+        flex-wrap: wrap;
+        float: right;
+    }
+    p{
+        display: flex;
+        text-align: right;
+        padding-left: 25em;
+    }
+    footer{
+        margin-top: 10em;
     }
 }
     
