--- a/code/faith/HTML/lab02/lab02.css
+++ b/code/faith/HTML/lab02/lab02.css
@@ -1,3 +1,9 @@
+body{
+    text-align: center;
+    background:rgba(227, 188, 105, 0.544);
+    
+}
+
 header{
     /* font-family: fantasy;
     text-align: center;
@@ -10,15 +16,9 @@ header{
     border-color: rgba(227, 188, 105, 0.544);
     background-color: bisque;
     font-family: monospace;
+    grid-column: 1/3;
 }
-body{
-    display: grid;
-    grid-template-columns: repeat(10vw 30vw 10vw);
-    grid-gap: 1em;
-    text-align: center;
-    background:rgba(227, 188, 105, 0.544);
-    
-}
+
 
 h1{
     font-family: monospace;
@@ -32,12 +32,7 @@ q{
     font-weight: 800;
     font-family: cursive;
 }
-.main.img{
-    display: flex;
 
-    margin-right: auto;
-    padding: 20%;
-}
 img{
     border: 10px groove rgba(227, 188, 105, 0.544);
     margin: auto;
@@ -48,35 +43,42 @@ footer{
     border-color: rgba(227, 188, 105, 0.544);
     background-color: bisque;
     font-family: monospace;
+    grid-column: 1/3;
 }
 @media screen and ( min-width: 700px){
     img {
-        display: flex;
-        flex-wrap: wrap;
-        float: left;
         
+        grid-column: 1/2;
     }
     header{
         margin-bottom: 10em;
     }
     
-    p{
-        float: left;
-        text-align: left;
-        padding-right: 25em;
+    .p{
+        
+        
+        
+        grid-column: 2/3;
     }
+    #main{
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-gap: 1em;
+    }
+    
+
 }
 @media screen and (min-width: 1100px){
-    img{
-        display: flex;
-        flex-wrap: wrap;
-        float: right;
-    }
-    p{
-        display: flex;
-        text-align: right;
-        padding-left: 25em;
-    }
+   #main{
+    grid-template-columns: 1fr auto 1fr 1fr;
+
+   }
+   img{
+    grid-column: 2/3;
+   }
+   .p{
+    grid-column: 3/4;
+   }
     footer{
         margin-top: 10em;
     }
