--- a/code/mileidy/HTML_CSS/lab02/lab02.css
+++ b/code/mileidy/HTML_CSS/lab02/lab02.css
@@ -1,1 +1,6 @@
-saving branch start process
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@600&family=Noto+Serif+HK&display=swap');
+
+
+#body{
+    font-family: 'Noto Serif HK', serif;
+}  
