--- a/code/patrick/html/lab03point1/lab03.css
+++ b/code/patrick/html/lab03point1/lab03.css
@@ -55,6 +55,10 @@ display: block;
     display: flexbox;
 }
 
+.footer{
+    background-color: goldenrod;
+}
+
 
 @media all and (min-width: 768px){
     .title{
@@ -84,7 +88,7 @@ display: block;
         padding-top: 40px;
         background-color: aqua;
         text-size-adjust: auto;
-        justify-content: left;
+        justify-content: right;
         align-items: center;
         text-align: center;
         font-size: 30px;
@@ -117,6 +121,10 @@ display: block;
     
     .flex{
         display: flexbox;
+    }
+    .footer{
+        text-align: right;
+
     }
 }
 
@@ -177,11 +185,19 @@ display: block;
         align-content: space-between;
         
         
+        
        
        
     }
     
     .flex{
         display: flexbox;
+    }
+
+    footer{
+        text-align: center;
+        font-size: larger;
+        background-color: coral;
+
     }
 }
