--- a/code/Jen/html/03_blog.css
+++ b/code/Jen/html/03_blog.css
@@ -1,8 +1,7 @@
-
 .grid {
-    display: grid;
-    grid-template-columns: 400px auto 400px;
-    grid-gap: 2em;
+  display: grid;
+  grid-template-columns: 400px auto 400px;
+  grid-gap: 2em;
 }
 
 
@@ -10,8 +9,33 @@
    /* On screens that are 600px or less */
    @media screen and (max-width: 600px) {
     .grid {
+        
         display: grid;
-        grid-template-columns: 150px auto 150px;
+        grid-template-columns: auto;
+        grid-gap: 1em;
+      }
+  
+      header, footer {
+        grid-column: 1 / 5;
+        overflow: scroll;
+        font-size: 10;
+        overflow: scroll;
+        margin: 0;
+      }
+        
+      aside,
+       article {
+        overflow: scroll;
+      
+    
+    }
+  }
+       /* On screens that are 956px or less */
+   @media screen and (max-width: 956px) {
+    .grid {
+        overflow: scroll;
+        display: grid;
+        grid-template-columns: auto;
         grid-gap: 1em;
       }
   
@@ -21,19 +45,21 @@
 
     }
 
-    
 
   @media all and (max-width: 1530px) {
     aside,
     article {
-    overflow: scroll;
-    grid-column: 1 / 4;
+      overflow: scroll;
+      grid-column: 1 / 4;
   }
     header,
     footer    {
       grid-column: 1 / 4;
+      margin-inline: 50px;
+padding: 1em 0;
     }
   }
+
 
 
 .flex {
@@ -55,11 +81,13 @@ margin-inline: 50px;
 padding: 1em 0;
 background: rgb(83, 126, 147) url("https://images.pexels.com/photos/747964/pexels-photo-747964.jpeg?cs=srgb&dl=pexels-s-migaj-747964.jpg&fm=jpg") no-repeat fixed center; 
 color:rgb(98, 37, 37)
+
 }
   
 .header
 {
     text-shadow: 4px 4px 4px rgb(206, 204, 204);
+
 
 }
 
@@ -107,7 +135,7 @@ nav {
     justify-content: center;
     height: 5vh;
     font-family: 'Tangerine', serif;
-    font-size: 22px;
+    font-size: flex;
     text-shadow: 4px 4px 4px rgb(206, 204, 204);
     color:rgb(42, 65, 77)
 
@@ -123,9 +151,9 @@ nav {
     height: 15vh;
     grid-column: 1 / 4;
     font-family: 'Tangerine', serif;
-    font-size: 22px;
+    font-size: flex;
     text-shadow: 4px 4px 4px rgb(206, 204, 204);
-    color:rgb(42, 65, 77)
+    color:rgb(42, 65, 77);
     
 
   }
@@ -161,9 +189,7 @@ nav {
     justify-content: left;
   }
 
-header {
-    font-size: 40px
-}
+
 
 .image {
 
