lab02 with changes

--- a/code/patrick/html/lab02/lab02.css
+++ b/code/patrick/html/lab02/lab02.css
@@ -75,6 +75,12 @@ img{
         height: fit-content;
         width: fit-content;
         align-items: center;
+        background-color: transparent;
+        
+        
+    }
+    body{
+        background-image: url("pictures/BeforeAfter1.jpg");
         
     }
     
@@ -94,5 +100,9 @@ img{
         background-color: red;
         
     }
+    .header{
+        background-color: black;
+    }
+    
     
 }
