--- a/code/mileidy/HTML_CSS/lab02/lab02.css
+++ b/code/mileidy/HTML_CSS/lab02/lab02.css
@@ -31,20 +31,25 @@ header{
 img{
     display: flex;
     flex-direction: column;
+
 } 
 
-.gallery{
+.top{
     text-align: center;
 }
 
+.gallery{
+    text-align: center;
+
+}
 .gallery-item img{
-    width: 375px;
+    width: 375px;    
+
 }
 
 #photo{
-    width: 100vw;
+    width: 95vw;
     height: 42vw;
-
 }
 #booking{
     text-align: center;
@@ -58,6 +63,7 @@ img{
 @media (min-width: 750px){
     .gallery{
         display: flex;
+        justify-content: center;
     }
     .gallery-item{
         width: 50%;
@@ -72,9 +78,10 @@ img{
 @media (min-width: 980px){
     .gallery{
         display: flex;
+        justify-content: center ;
     }
     .gallery-item{
-        width: 20%;
+        width: 33%;
         padding: 0 1em;
     }
     .gallery-item img{
