--- a/code/patrick/html/lab03point1/lab03.css
+++ b/code/patrick/html/lab03point1/lab03.css
@@ -1,11 +1,16 @@
 
-
+body{
+    background-image: url("pictures/burgerlite.jpg");
+    background-size:90%;
+    background-position: center;
+    
+}
 
 .title{
     justify-content: center;
     text-align: center;
-    color: red;
-    background-color: black;
+    
+    
     display: flex;
     
 }
@@ -14,7 +19,7 @@
     justify-content: space-around;
     text-align: center;
     color: white;
-    background-color: black;
+    
     word-spacing: 3px;
     
 }
@@ -25,8 +30,9 @@
     position: absolute;
     left: 0;
     top: 10;
+    padding-left: 10px;
     padding-top: 40px;
-    background-color: aqua;
+    
     text-size-adjust: auto;
 }
     
@@ -34,6 +40,7 @@
     padding: 8px;
 font-size: 44px;
 display: block;
+
 
 }  
     
@@ -44,12 +51,8 @@ display: block;
 
 
 .posts{
-    margin-left: 87px;
-    font-size: 18px;
-    
-    background-color: black;
-    color:white
-    
+    margin-left: 150px;
+    font-size: 21px;
     
    
    
@@ -57,10 +60,6 @@ display: block;
 
 .flex{
     display: flexbox;
-}
-
-.footer{
-    background-color: goldenrod;
 }
 
 
@@ -90,82 +89,7 @@ display: block;
         left: 0;
         top: 10;
         padding-top: 40px;
-        background-color: aqua;
-        text-size-adjust: auto;
-        justify-content: right;
-        align-items: center;
-        text-align: center;
-        font-size: 30px;
-    }
         
-    .sidenav div{
-        padding: 8px;
-    font-size: 44px;
-    display: block;
-    
-    }  
-        
-       
-        
-    
-    
-    
-    
-    .posts{
-        margin-left: 250px;
-        font-size: 30px;
-        text-align: center;
-        justify-content: center;
-        align-content: space-between;
-        background-image: url("images/Cheeseburger.jpg");
-        background-repeat: no-repeat;
-        color: black;
-        background-color: white;
-        
-        
-        
-       
-       
-    }
-    
-    .flex{
-        display: flexbox;
-    }
-    .footer{
-        text-align: right;
-
-    }
-}
-
-@media all and (min-width: 1000px){
-    .title{
-        justify-content: center;
-        text-align: center;
-        color: red;
-        background-color: black;
-        display: flex;
-        font-size: 50px;
-        
-    }
-    .topnav{
-        display: flex;
-        justify-content: space-around;
-        text-align: center;
-        color: white;
-        background-color: black;
-        word-spacing: 3px;
-        font-size: 50px;
-        
-    }
-    
-    .sidenav{
-        height: 80%;
-        width: 200px;
-        position: absolute;
-        left: 0;
-        top: 10;
-        padding-top: 40px;
-        background-color: aqua;
         text-size-adjust: auto;
         justify-content: left;
         align-items: center;
@@ -188,13 +112,10 @@ display: block;
     
     .posts{
         margin-left: 250px;
-        font-size: 30px;
+        font-size: 20px;
         text-align: center;
         justify-content: center;
         align-content: space-between;
-        background-image: url("images/Cheeseburger.jpg");
-        background-repeat: no-repeat;
-        
         
         
        
@@ -204,11 +125,71 @@ display: block;
     .flex{
         display: flexbox;
     }
+}
 
-    footer{
+@media all and (min-width: 1000px){
+    .title{
+        justify-content: center;
         text-align: center;
-        font-size: larger;
-        background-color: coral;
-
+        color: red;
+        
+        display: flex;
+        font-size: 50px;
+        
+    }
+    .topnav{
+        display: flex;
+        justify-content: space-around;
+        text-align: center;
+        color: white;
+        word-spacing: 3px;
+        font-size: 50px;
+        
+        
+    }
+    
+    .sidenav{
+        height: 80%;
+        width: 200px;
+        position: absolute;
+        left: 0;
+        top: 10;
+        padding-top: 40px;
+        
+        text-size-adjust: auto;
+        justify-content: left;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+    }
+        
+    .sidenav div{
+        padding: 8px;
+    font-size: 44px;
+    display: block;
+    
+    }  
+        
+       
+        
+    
+    
+    
+    
+    .posts{
+        margin-left: 250px;
+        font-size: 80px;
+        text-align: center;
+        justify-content: center;
+        align-content: space-between;
+        color:
+        
+        
+       
+       
+    }
+    
+    .flex{
+        display: flexbox;
     }
 }
