Looks bad but I think I hit all the checkboxes now. Redid the whole thing too because the first version was hard to work with tbh

--- a/code/jordyn/html/lab01/lab01.css
+++ b/code/jordyn/html/lab01/lab01.css
@@ -1,42 +1,76 @@
 body {
-    margin: 20px;
-    background-color: #66b3ff;
-  }
-  a {
-    color: blue;
-    font-weight: bold;
-  }
-  img {
-    float: right;
-    border-radius: 50%;
-  }
-  .image1 {
-    float: right;
-    position: relative;
-    top: 100px;
-  }
-  #Catgirl {
-    float: left;
-    margin: 40px;
-  }
-  h1 {
-    color: #003cb3;
-  }
-  h2 {
-    color: purple;
-    font-size: 20px;
-  }
-  .centered {
-    position: relative;
-    left: 20px;
-    margin: auto;
-    width: 50%;
-  }
-  ul {
-    text-indent: 50px;
-    list-style-type: square;
-  }
-  p {
-    color: #000000;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #80b6b6;
+}
+
+img {
+  border-radius: 25%;
+}
+
+p {
+  font-size: 24px;
+  color: #340934;
+}
+
+ul {
+  list-style-type: circle;
+  font-size: 20px;
+}
+
+a {
+  color: #5c0e5c;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#header-left {
+  margin-right: 20%;
+  margin-left: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#musk-profile {
+  height: 40vw;
+  width: 40vw;
+  object-fit: cover;
+}
+
+#elon-name {
+  font-size: 40px;
+}
+
+#wiki-blip {
+  font-size: 34px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#quote {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#quote-left {
+  display: flex;
+  flex-direction: column;
+  font-family: fantasy;
+  font-size: 32px;
+}
+
+#cat-girl {
+  height: 20vw;
+  width: 20vw;
+  object-fit: cover;
+  padding-left: 50px;
+}
