--- a/code/patrick/htlm/lab04/lab04.css
+++ b/code/patrick/htlm/lab04/lab04.css
@@ -1,8 +1,15 @@
+
+
 body{
-    background-image: url("images/burrito-small.jpg");
+    /*background-image: url("images/burrito-small.jpg");*/
+    background:linear-gradient(0deg, rgba(131, 129, 97, 0.3), rgba(127, 151, 91, 0.3)),url("images/burrito-small.jpg");
+    background-size: fill;
     text-align: center;
-    color:brown;
+
+    color:black;
+    
 }
+
 
 .responsive{
     width: 100%;
@@ -11,11 +18,46 @@ body{
 
 @media all and (min-width: 768px){
     body{
-    background-image: url("images/rest.jpg");
-    background-repeat: no-repeat;
-    background-size:contain;
-    background-position:center;
+    background-image: url();
+    background:linear-gradient(0deg, rgba(7, 7, 6, 0.254), rgba(7, 7, 6, 0.254)),url("images/opensmall.jpg");
+    background-size: cover;
+    font-size: larger;
+    
+    
+    
+   
+    color: rgb(225, 227, 238);
+    
+    }  
+    .build{
+        flex-direction: column;
+        margin-top: 50%;
+    }
+}
+
+
+
+@media all and (min-width: 1000px){
+    body{
+        background:linear-gradient(0deg, rgba(7, 7, 6, 0.254), rgba(7, 7, 6, 0.254)),url("images/table.jpg");
+        background-size: cover
+    }
+
+    
+    .build{
+        flex-direction: row;
+        margin-top: 0%;
+        text-align: center;
+        font-size: 2em;
+        color: black;
+    }
+    .person{
+        text-align: center;
+        font-size: xx-large;
+        color: black;
     }
 
 
 }
+
+
