--- a/code/faith/HTML/lab04html/lab04.css
+++ b/code/faith/HTML/lab04html/lab04.css
@@ -6,9 +6,25 @@ h1{
     font-family: 'Fredoka One', cursive;
     font-size: 350%;
     animation: title 1s ease-in-out 0s infinite alternate;
+    border-bottom: 5px dotted #112A46;
+    text-align: center;
+    background-color: #f7c93fc3;
+    margin: 0;
+}
+footer{
+    text-align: center;
+    border-top: 5px dotted #112A46;
+    background-color: #f7c93fc3;
+    margin: 0%;
+    padding-top: 3%;
+}
+.instructions{
+    padding-bottom: 3%;
+}
+.submit{
+    padding-bottom: 3%;
 }
 
 @keyframes title{
     0% {color: rgb(255, 213, 154); margin-left: 0px; text-shadow: 0px 0px 5px rgb(238, 225, 204);}
-    /* 100% {color: rgb(239, 186, 53); margin-left: 100px; text-shadow: 0px 0px 10px rgb(141, 115, 10);} */
 }
