--- a/code/vel/html/lab03/lab03.css
+++ b/code/vel/html/lab03/lab03.css
@@ -12,6 +12,8 @@ body {
     background-repeat: no-repeat;
     background-position: bottom, center;
     width: 100%;
+    max-width: 100vw;
+    margin: 0;
 } 
 
 .header{
@@ -40,7 +42,7 @@ body {
     overflow: scroll;
     overflow-x: hidden;
     font-size: 14px;
-    width: 70vw;
+    width: 70%;
     
 }
 
@@ -53,6 +55,10 @@ body {
     justify-content: space-between;
     flex-direction: column;
     padding: 25px;
+    width: 10%;
+    margin: 0;
+    height: 14rem;
+    
 
 }
 
@@ -64,12 +70,12 @@ main{
 
 }
 
-#sidebar{
+/* #sidebar{
     width: 10%;
     margin: 0;
     height: 14rem;
     
-}
+} */
 
 .footer{
     display: inline-flex;
