--- a/code/cesar/html_css/lab04_burrito/styles.css
+++ b/code/cesar/html_css/lab04_burrito/styles.css
@@ -6,7 +6,6 @@ body {
 
 header {
     font-style: oblique;
-
 }
 
 .image-banner {
@@ -14,51 +13,15 @@ header {
     flex-direction: column;
     border: 2px solid;
     width: 100%;
-
 }
 
-.information {
-    display: flex;
-    flex-direction: column;
-    margin-top: 10px;
-    padding: 10px;
-}
-
-div {
-    margin: 20px;
-}
-
-/* .tortilla-options {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid;
-    width: 100%;
-}
-
-.rice-options {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid;
-    width: 100%;
-}
-
-.bean-options {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid;
-    width: 100%;
-}
-
-.protein-options {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid;
-    width: 100%;
-}
-
+.information,
+.tortilla-options,
+.rice-options,
+.bean-options,
+.protein-options,
 .additional {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid;
-    width: 100%;
-} */
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px;
+}
