--- a/code/mileidy/HTML_CSS/lab04/lab04.css
+++ b/code/mileidy/HTML_CSS/lab04/lab04.css
@@ -2,7 +2,19 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: red;
+}
 
+.photos{
+        display: flex;
+        flex: 33.33%;
+        padding: 5px;
+        width: 33%;
+}
+
+.entire{
+    display: flex;
+    flex-direction: row;
 }
 
 #welcome{
@@ -10,6 +22,7 @@ body{
     text-align: center;
     font-size: x-large;
 }
+
 #burritos{
     font-family: 'DynaPuff', cursive;
     text-align: center;
@@ -33,8 +46,20 @@ body{
         border-radius: 4px;
 }
 
+#form{
+    margin:0%;
+    width: 300px;
+    display: flex;
+    align-items: center;
+}
 
 @keyframes burritos {
     0% {color:black; margin-left: 0px; text-shadow: 0px 0px 5px #000;}
     100% {color: red; margin-left: 0px; text-shadow: 0px 0px 10px yellow;}
+}
+
+@media (max-width: 500px){
+    #one.photos{
+        display: none;
+    }
 }
