--- a/code/rob/html/lab4/lab4.css
+++ b/code/rob/html/lab4/lab4.css
@@ -241,7 +241,7 @@ footer img{
         margin-top: 200px;
     }
     #items{
-        grid-columns: 1/3;
+        grid-column: 1/3;
         grid-row: 3/4;
     }
 }
