--- a/code/faith/HTML/lab02/lab02.css
+++ b/code/faith/HTML/lab02/lab02.css
@@ -70,14 +70,18 @@ footer{
 }
 @media screen and (min-width: 1100px){
    #main{
-    grid-template-columns: 1fr auto 1fr 1fr;
+    grid-template-columns: auto 1fr auto 1fr;
 
    }
    img{
-    grid-column: 2/3;
+    grid-column: 1/3;
+    width: 75%;
+    height: 75%;
    }
    .p{
-    grid-column: 3/4;
+    grid-column: 4/4;
+    margin-right: 5%;
+    font-size: 200%;
    }
     footer{
         margin-top: 10em;
