--- a/code/patrick/django/lab01/grocerylist/templates/grocerylist/index.html
+++ b/code/patrick/django/lab01/grocerylist/templates/grocerylist/index.html
@@ -1,9 +1,19 @@
-{% if full_gorcery_list %}
+{% if full_grocery_list %}
     <ul>
-    {% for item in full_gorcery_list %}
-        <li><a href="/grocerylist">{{ groceryitem.item_text }}</a></li>
+    {% for item in full_grocery_list %}
+        <li> {{ item.item_text }} </li>
     {% endfor %}
     </ul>
 {% else %}
     <p>No items are available.</p>
 {% endif %}
+
+
+
+<form action = "" method = "POST">
+    {% csrf_token %}
+    
+    <input type="text" name="item_text" value="groceryitem">
+    
+    <input type="submit" value="add grocery item">
+</form>
