--- a/code/Jen/django/lab_01/grocery_list/groceries/templates/groceries/index.html
+++ b/code/Jen/django/lab_01/grocery_list/groceries/templates/groceries/index.html
@@ -29,22 +29,23 @@
         <h2> Items </h2>
         <p>
         <ul>
-            {% for item in incompleted_list %}
-            <li><a href="/shopped/{{ item.id}}"><input type="checkbox"></a>
-                {{ item }}
-                <a href="/delete/{{ item.id }}">Delete</a>
-            </li>
+            <form method="GET">
+                {% for item in incompleted_list %}
+                <li><a href="/shopped/{{ item.id}}">Complete</a>
+                    {{ item }}
+                    <a href="/delete/{{ item.id }}">Delete</a>
+                </li>
 
-            {% endfor %}
-            <h2> Shopped Items </h2>
-            {% for item in completed_list %}
-            <li> <a href="/shopped/{{ item.id }}"><input type="checkbox"></a>
-                <s> {{ item }} </s>
-                <a href=" /delete/{{ item.id }}">Delete</a>
-            </li>
+                {% endfor %}
+                <h2> Shopped Items </h2>
+                {% for item in completed_list %}
+                <li> <a href="/shopped/{{ item.id }}">Undo</a>
+                    <s> {{ item }} </s>
+                    <a href="/delete/{{ item.id }}">Delete</a>
+                </li>
 
-            {% endfor %}
-
+                {% endfor %}
+            </form>
         </ul>
         <p>
 
