--- a/code/teyon/django/lab01/grocerylist/templates/grocerylist/index.html
+++ b/code/teyon/django/lab01/grocerylist/templates/grocerylist/index.html
@@ -33,6 +33,10 @@
                 {% csrf_token %}
                 <input type="submit" value="completed">
             </form>
+            <form action="{% url 'grocery_list:delete' item.id %}" method="post">
+                {% csrf_token %}
+                <input type="submit" value="delete">
+            </form>
             {% endfor %}
         </ul>
     </div>
