--- a/code/faith/Django/URLShortener/urlshort_app/templates/urlshort_app/index.html
+++ b/code/faith/Django/URLShortener/urlshort_app/templates/urlshort_app/index.html
@@ -1,4 +1,4 @@
-<form action="{%  url 'urlshort_app:submit_url' long_url.id %}" method="post">
+<form action="" method="post">
     <label for="long_url">Enter URL</label>
     <input type="long_url" id="long_url" name="long_url">
 </form>
