--- a/code/patrick/django/lab03/twitapp/chatter/templates/chatter/base.html
+++ b/code/patrick/django/lab03/twitapp/chatter/templates/chatter/base.html
@@ -34,6 +34,8 @@
                 {% if user.is_authenticated %}
                   <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                  <a class="nav-item nav-link" href="{% url 'post-create' %}">CreatePost</a>
+                  
 
                 {% else %}
                   <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
@@ -62,10 +64,9 @@
               <h3>Our Sidebar</h3>
               <p class='text-muted'>You can put any information here you'd like.
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-light">Latest Posts</li>
-                  <li class="list-group-item list-group-item-light">Announcements</li>
-                  <li class="list-group-item list-group-item-light">Calendars</li>
-                  <li class="list-group-item list-group-item-light">etc</li>
+                  <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                  <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                  <a class="nav-item nav-link" href="{% url 'post-create' %}">CreatePost</a>
                 </ul>
               </p>
             </div>
